fix video cutoff issue

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -142,6 +142,8 @@
   left: 0px;
   top: 0px;
   z-index: -1;
+  width: 100%;
+  height: auto;
 }
 
 .video-overlay {
